Succesful version. Good working grid, bg, hovers, correct z-index

--- a/styles/style.css
+++ b/styles/style.css
@@ -36,18 +36,31 @@
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     grid-gap: 15px;
     text-align: left;
-    font-size: 30px;
-    color: #fff;
+    font-size: 16px;
+    color:yellow;
 }
 .card {
+    display: block;
     position: relative;
     width: 200px;
     height: 200px;
     border-radius: 10px;
     overflow: hidden;
     box-shadow: none;
+    padding: 15px;
 }
 
+.card-container{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    top: -170px;
+    left: 0;
+    z-index: 2;
+}
+.card-detail .card-container{
+    top: -395px;
+}
 
 .card .info{
     display: block;
@@ -56,11 +69,14 @@
     top: 0;
     width: 100%;
 }
+.likes:hover{
+    color: red;
+}
 
 .card::after{
     position: absolute;
     content: '';
-    z-index: 5;
+    z-index: 1;
     top: 0;
     bottom: 0;
     left: 0;
@@ -68,7 +84,7 @@
     width: 100%;
     height: 100%;
     border-radius: 10px;
-    transition: all 0.3s ease-in-out;
+    transition: all 0.2s ease-in-out;
 }
 .card:hover::after{    
     box-shadow: inset 0 0 0 5px red;
@@ -101,12 +117,12 @@
     bottom: 0;
     background-color: #3f444e;
     opacity: 0.4;
-    transition: all 0.4s ease-in-out;
+    transition: all 0.3s ease-in-out;
 }
 .card-detail .bg::after{
     opacity: 0.7;
     top: 165px;
-    transition: all 0.4s ease-in-out;
+    transition: all 0.3s ease-in-out;
 }
 
 .card:hover .bg::after{
